--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
   </head>
   <body>
     <header>Etch-a-Sketch</header>
-    <div class="mainDiv">
-        
+    <div class="div1">
+      <p>
+        Enter the dimensions of the grid :
+        <input class="input grid" type="number" placeholder="max 64" />
+        <button id="confirmGridNumber">Enter</button>
+      </p>
     </div>
+    <div class="mainDiv"></div>
   </body>
 </html>
