--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div class="div1">
       <p>
         Enter the dimensions of the grid :
-        <input class="input grid" type="number" placeholder="max 64" />
-        <button id="confirmGridNumber">Enter</button>
+        <input id="myInput" type="number" placeholder="max 64" />
+        <button class="button1" >Enter</button>
       </p>
     </div>
     <div class="mainDiv"></div>
