--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
     <div class="div1">
       <p>
         Enter the dimensions of the grid :
-        <input class="input grid" type="number" placeholder="max 64" />
+        <input class="input-grid" type="number" placeholder="max 64" />
         <button id="confirmGridNumber">Enter</button>
       </p>
+      
     </div>
     <div class="mainDiv"></div>
   </body>
