added few changes

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
         Enter the dimensions of the grid :
         <input class="inputgrid" type="number" placeholder="max 64" />
         <button id="confirmGridNumber">Enter</button>
+        <button id="reset">Reset</button>
       </p>
     </div>
-    <div class="mainDiv"></div>
+    <div class="container"></div>
   </body>
 </html>
