finished grid formation

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
         <button id="confirmGridNumber">Enter</button>
         <button id="reset">Reset</button>
       </p>
-      
+      <p style="margin: 3px; padding: 8px">
+        Select your favourite color :
+        <input type="color" id="colorpicker" value="#000000" />
+      </p>
     </div>
     <div class="container"></div>
   </body>
