finished grid formation and interation

--- a/index.html
+++ b/index.html
@@ -18,14 +18,17 @@
     <div class="div1">
       <p>
         Enter the dimensions of the grid :
-        <input class="input-grid" type="number" placeholder="max 64" />
+        <input class="input-grid" type="number" placeholder="max 200" />
         <button id="confirmGridNumber">Enter</button>
         <button id="reset">Reset</button>
+        <button id="click">Click mode</button>
       </p>
-      <p style="margin: 3px; padding: 8px">
-        Select your favourite color :
-        <input type="color" id="colorpicker" value="#000000" />
-      </p>
+      <div>
+        <p>
+          Select your favourite color :
+          <input type="color" id="colorpicker" value="#000000" />
+        </p>
+      </div>
     </div>
     <div class="container"></div>
   </body>
