finished grid formation and interation

--- a/index.html
+++ b/index.html
@@ -23,12 +23,10 @@
         <button id="reset">Reset</button>
         <button id="click">Click mode</button>
       </p>
-      <div>
         <p>
-          Select your favourite color :
+          Select your color :
           <input type="color" id="colorpicker" value="#000000" />
         </p>
-      </div>
     </div>
     <div class="container"></div>
   </body>
