aimed goals met

--- a/index.html
+++ b/index.html
@@ -22,12 +22,24 @@
         <button id="confirmGridNumber">Enter</button>
         <button id="reset">Reset</button>
         <button id="click">Click mode</button>
+        <button id="random">Random color mode</button>
       </p>
-        <p>
-          Select your color :
-          <input type="color" id="colorpicker" value="#000000" />
-        </p>
+      <p style="margin-left: 6px">
+        Select your color :
+        <input
+          type="color"
+          name="colorpicker"
+          id="colorpick"
+          style="height: 20px"
+        />
+      </p>
     </div>
     <div class="container"></div>
+    <div>
+      Note: <br />
+      <ul>
+        <li>To go back to single color, click on Reset button.</li>
+      </ul>
+    </div>
   </body>
 </html>
