aimed goals met

--- a/index.html
+++ b/index.html
@@ -35,11 +35,8 @@
       </p>
     </div>
     <div class="container"></div>
-    <div>
-      Note: <br />
-      <ul>
-        <li>To go back to single color, click on Reset button.</li>
-      </ul>
+    <div class="note">
+      Note: To go back to single color, click on Reset button.
     </div>
   </body>
 </html>
